--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
     "@reduxjs/toolkit": "^1.8.3",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0"
   }
