--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hantry-front",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
@@ -51,5 +52,16 @@
     "dotenv": "^16.0.1",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hkh0105/Hantry-Front.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hkh0105/Hantry-Front/issues"
   }
 }
