--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "cookies-next": "^2.1.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "immer": "^9.0.15",
+    "jest": "^28.1.3",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
@@ -28,7 +31,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "jest",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
