--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "immer": "^9.0.15",
-    "jest": "^28.1.3",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
@@ -31,9 +30,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "jest",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
