--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "immer": "^9.0.15",
+    "jest": "^28.1.3",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
