--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "immer": "^9.0.15",
     "jest": "^28.1.3",
     "jwt-decode": "^3.1.2",
-    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -28,6 +27,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
