--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
     "@reduxjs/toolkit": "^1.8.3",
+    "@tanstack/react-query": "^4.20.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "axios": "^0.27.2",
     "cookies-next": "^2.1.1",
     "enzyme": "^3.11.0",
@@ -28,6 +33,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
